# django-crontab-manager

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
django_crontab_manager/: __init__.py  admin.py  app_settings.py  apps.py  models.py  services.py  urls.py  views.py
django_crontab_manager/adapters/: __init__.py  cronjob_repository.py  executor.py  repository.py
django_crontab_manager/fixtures/: dumpdata.json
django_crontab_manager/migrations/: 0001_initial.py  0002_auto_20210712_1344.py
django_crontab_manager/templates/django_crontab_manager/: admin_cronjob_change_form.html  admin_cronjob_changelist.html  base.html  footer.html  header.html  home.html  navbar.html
django_crontab_manager/templatetags/: lookup_dict.py
django_crontab_manager/tests/: conftest.py
django_crontab_manager/tests/e2e/: test_add_all_cronjobs_view copy.py  test_home_view.py  test_remove_all_cronjobs_view.py  test_run_cronjobs_view.py
django_crontab_manager/tests/integration/: test_django_executor.py  test_django_repository.py  test_service.py
django_crontab_manager/tests/unit/: test_cronjob_model.py  test_services.py
