[metadata]
name = django-crontab-manager
version = 0.0.10
description = Crontab Manager is a Django app that aims to help manage cronjobs running by django-crontab.
long_description = file: README.rst
url = https://github.com/marcosricardoss/django-crontab-manager
author = Marcos Ricardo
author_email = marcosricardoss@gmail.com
license = MIT-License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.1 
    python-crontab >= 2.5.1 
    django-crontab >= 0.7.1